--- a/pg2.html
+++ b/pg2.html
@@ -10,6 +10,6 @@ text-align:center
 </style>
 <body>
 <h1>This is the Voters Educ Hub</h1>
-<a href="voteweb.html">Click here to be redirected</a>
+<a href="index.html">Click here to be redirected</a>
 </body>
 </html>
